[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
# cargo = { level = "deny", priority = -1 }
# restriction = { level = "deny", priority = -1 }


unwrap_used = "allow"


[dependencies]
